add content to art (minimal)

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,20 @@ html, body {
   top: 7.5%;
   left: 7.5%;
 
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.content {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.content {
   overflow: scroll;
 }
 
