--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
-  
-  display: grid;
-  align-content: center;    /* vertical */
-  justify-content: center;  /* horizontal */
 
+  display: grid;
+  align-content: center; /* vertical */
+  justify-content: center; /* horizontal */
 }
 
 .App {
   box-shadow: 5px 10px 8px #888888;
-  border-radius: 5px 5px 30px 5px;  /* 'union' of .content's and .console's  */
+  border-radius: 5px 5px 30px 5px; /* 'union' of .content's and .console's  */
   margin: 3em 2em;
 }
 
@@ -30,15 +30,14 @@ html, body {
 .content {
   /* box-sizing: content-box; */
   z-index: 1;
-  
+
   width: 85%;
   height: 85%;
   background-color: #eee;
-  
+
   position: absolute;
   top: 7.5%;
   left: 7.5%;
-
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -57,7 +56,7 @@ html, body {
 }
 
 /* padding for contents on screen */
-.content>* {
+.content > * {
   padding: 1em;
 }
 
@@ -131,7 +130,7 @@ html, body {
   grid-row: 2;
 }
 
-.direction-button{
+.direction-button {
   font-size: 2em;
   border-radius: 2.5px;
   color: white;
@@ -158,7 +157,7 @@ html, body {
   cursor: pointer;
 }
 
-.console-item:active{
+.console-item:active {
   color: black;
   background-color: white;
 }
