--- a/src/pages/art/ArtDisplay.css
+++ b/src/pages/art/ArtDisplay.css
@@ -2,6 +2,10 @@
   line-height: 1.6;
 }
 
+.art-display-body {
+  text-align: center;
+}
+
 .displayName {
   position: sticky;
   top: 1em;
@@ -9,6 +13,10 @@
 }
 
 .art-image {
-  width: 100%;
+  width: 95%;
   height: auto;
+}
+
+.art-image-list > li {
+  padding-bottom: 1.5em;
 }
