--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 @font-face {
-  font-family: 'PressStart2P';
-  src: local('PressStart2P'), url(./fonts/Press_Start_2P/PressStart2P-Regular.ttf) format('truetype');
+  font-family: "PressStart2P";
+  src: local("PressStart2P"),
+    url(./fonts/Press_Start_2P/PressStart2P-Regular.ttf) format("truetype");
 }
 
 body {
   margin: 0;
-  font-family: PressStart2P, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: PressStart2P, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
@@ -15,6 +16,10 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro,
+    "Courier New",
+    Menlo,
+    Monaco,
+    Consolas,
     monospace;
 }
