--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,7 +1,7 @@
 ul.inline-list li {
   /* display: flex;
     justify-content: space-evenly; */
-  padding: 0.5em;
+  /* padding: 0.5em; */
 }
 
 .about {
