--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -1,7 +1,9 @@
 .nav-bar {
-  box-shadow: 5px 10px 8px #888888;
-  border-radius: 5px 5px 30px 5px; /* 'union' of .content's and .console's  */
+  /* box-shadow: 5px 10px 8px #888888; */
+  /* border-radius: 5px 5px 30px 5px; 'union' of .content's and .console's  */
   /* margin: 3em 2em; */
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .nav-items {
