--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,13 @@
 }
 
 body {
-  margin: 0;
-  font-family: PressStart2P, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  /* margin: 0; */
+  padding: 12px;
+  font-family: "Courier New", PressStart2P, -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 100;
-}
-
-code {
-  font-family: source-code-pro,
-    "Courier New",
-    Menlo,
-    Monaco,
-    Consolas,
-    monospace;
 }
