--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ body {
   font-size: 12px;
   font-weight: 100;
 }
+
+/* anchors */
+a {
+  text-decoration: none;
+}
+a:link,
+a:visited {
+  color: inherit;
+}
