--- a/src/styles/ExhibitionThumbnail.css
+++ b/src/styles/ExhibitionThumbnail.css
@@ -1,4 +1,21 @@
-.exhibition-thumb-nail-body {
+.exhibition-thumbnail {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+.exhibition-thumbnail-body {
   display: flex;
   flex-direction: row;
+  gap: 20px;
+  flex: 1;
+}
+
+.exhibition-thumbnail-image {
+  box-shadow: 8px 3px 8px #888888;
+  z-index: 1;
+  position: relative;
+}
+
+h4.exhibition-name {
+  margin-top: 0;
+  text-transform: uppercase;
 }
