--- a/src/styles/Exhibition.css
+++ b/src/styles/Exhibition.css
@@ -1,5 +1,7 @@
 .exhibition-body {
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 /* .exhibition-image-wrapper {
@@ -8,6 +10,7 @@
 .focused-image-wrapper {
   height: 348px;
 }
+
 .focused-image {
   /* max-height: 348px; */
   width: 348px;
@@ -34,14 +37,21 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
-  
   width: 348px;
-  
   overflow-x: scroll;
-  
   margin: 24px 12px 12px 12px;
-
   background-color: #fcfcfcf6;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.exhibition-slide-show::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.exhibition-slide-show {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .exhibition-slide-show-thumbnail-wrapper {
