--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -3,7 +3,7 @@
   /* border-radius: 5px 5px 30px 5px; 'union' of .content's and .console's  */
   /* margin: 3em 2em; */
   text-transform: uppercase;
-  font-weight: 500;
+  /* font-weight: 500; */
 }
 
 .nav-items {
