--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,28 @@
 body {
   /* margin: 0; */
   padding: 24px;
-  font-family: "Courier New", PressStart2P, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: monospace, monaco, "Courier New", PressStart2P, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 100;
   width: 595px;
-  color: #4b4a4a;
+  color: #555454;
+
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 /* anchors */
 a {
   text-decoration: none;
 }
-a:link, a:visited {
+a:link,
+a:visited {
   color: inherit;
 }
 a.anchor-hover-black-background-white-text:hover {
