add and hide back btn

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,8 @@ a.anchor-hover-black-background-white-text:hover {
 .invisible {
   visibility: hidden;
 }
+
+/*  */
+.back-button {
+  margin-bottom: 1em;
+}
